src/app/src/application.css
/* ... */
.h-5 {
  height: 1.25rem !important;
}
.h-6 {
  height: 1.5rem !important;
}
.h-7 {
  height: 1.75rem !important;
}
.h-8 {
  height: 2rem !important;
}
.h-9 {
  height: 2.25rem !important;
}
.h-\[115px\] {
  height: 115px !important;
}
.h-\[25\%\] {
  height: 25% !important;
}
.h-\[25vh\] {
  height: 25vh !important;
}
.h-\[35px\] {
  height: 35px !important;
}
.h-\[450px\] {
  height: 450px !important;
}
.h-\[45px\] {
  height: 45px !important;
}
.h-\[50px\] {
  height: 50px !important;
}
.h-\[70px\] {
  height: 70px !important;
}
.h-\[75\%\] {
  height: 75% !important;
}
.h-\[calc\(4vh\+3px\)\] {
  height: calc(4vh + 3px) !important;
}
.h-\[max\(30px\2c 3vh\)\] {
  height: max(30px,3vh) !important;
}
.h-\[var\(--radix-navigation-menu-viewport-height\)\] {
  height: var(--radix-navigation-menu-viewport-height) !important;
}
.h-\[var\(--radix-select-trigger-height\)\] {
  height: var(--radix-select-trigger-height) !important;
}
.h-auto {
  height: auto !important;
}
.h-full {
  height: 100% !important;
}
.h-px {
  height: 1px !important;
}
.max-h-6 {
  max-height: 1.5rem !important;
}
.max-h-96 {
  max-height: 24rem !important;
}
.max-h-\[300px\] {
  max-height: 300px !important;
}
.max-h-full {
  max-height: 100% !important;
}
.max-h-screen {
  max-height: 100vh !important;
}
.min-h-10 {
  min-height: 2.5rem !important;
}
.min-h-20 {
  min-height: 5rem !important;
}
.min-h-48 {
  min-height: 12rem !important;
}
.min-h-96 {
  min-height: 24rem !important;
}
.min-h-\[200px\] {
  min-height: 200px !important;
}
.min-h-\[80px\] {
  min-height: 80px !important;
}
.min-h-full {
  min-height: 100% !important;
}
.w-1\/2 {
  width: 50% !important;
}
.w-10 {
  width: 2.5rem !important;
}
.w-11 {
  width: 2.75rem !important;
}
.w-12 {
  width: 3rem !important;
}
.w-16 {
  width: 4rem !important;
}
.w-2 {
  width: 0.5rem !important;
}
.w-2\.5 {
  width: 0.625rem !important;
}
.w-20 {
  width: 5rem !important;
}
.w-24 {
  width: 6rem !important;
}
.w-3 {
  width: 0.75rem !important;
}
.w-3\.5 {
  width: 0.875rem !important;
}
.w-3\/4 {
  width: 75% !important;
}
.w-32 {
  width: 8rem !important;
}
.w-4 {
  width: 1rem !important;
}
.w-40 {
  width: 10rem !important;
}
.w-5 {
  width: 1.25rem !important;
}
.w-6 {
  width: 1.5rem !important;
}
.w-60 {
  width: 15rem !important;
}
.w-64 {
  width: 16rem !important;
}
.w-72 {
  width: 18rem !important;
}
.w-8 {
  width: 2rem !important;
}
.w-\[100px\] {
  width: 100px !important;
}
.w-\[1200px\] {
  width: 1200px !important;
}
.w-\[180px\] {
  width: 180px !important;
}
.w-\[33\%\] {
  width: 33% !important;
}
.w-\[40vw\] {
  width: 40vw !important;
}
.w-\[45px\] {
  width: 45px !important;
}
.w-\[50px\] {
  width: 50px !important;
}
.w-\[600px\] {
  width: 600px !important;
}
.w-\[700px\] {
  width: 700px !important;
}
.w-\[7ch\] {
  width: 7ch !important;
}
.w-\[8\.5rem\] {
  width: 8.5rem !important;
}
.w-\[8ch\] {
  width: 8ch !important;
}
.w-\[90\%\] {
  width: 90% !important;
}
.w-\[968px\] {
  width: 968px !important;
}
.w-\[9ch\] {
  width: 9ch !important;
}
.w-auto {
  width: auto !important;
}
.w-full {
  width: 100% !important;
}
.w-max {
  width: -moz-max-content !important;
  width: max-content !important;
}
.min-w-0 {
  min-width: 0px !important;
}
.min-w-12 {
  min-width: 3rem !important;
}
.min-w-20 {
  min-width: 5rem !important;
}
.min-w-4 {
  min-width: 1rem !important;
}
.min-w-64 {
  min-width: 16rem !important;
}
.min-w-7 {
  min-width: 1.75rem !important;
}
.min-w-8 {
  min-width: 2rem !important;
}
.min-w-80 {
  min-width: 20rem !important;
}
.min-w-96 {
  min-width: 24rem !important;
}
.min-w-\[200px\] {
  min-width: 200px !important;
}
.min-w-\[250px\] {
  min-width: 250px !important;
}
.min-w-\[8rem\] {
  min-width: 8rem !important;
}
.min-w-\[var\(--radix-select-trigger-width\)\] {
  min-width: var(--radix-select-trigger-width) !important;
}
.max-w-6 {
  max-width: 1.5rem !important;
}
.max-w-64 {
  max-width: 16rem !important;
}
.max-w-\[125px\] {
  max-width: 125px !important;
}
.max-w-full {
  max-width: 100% !important;
}
.max-w-lg {
  max-width: 32rem !important;
}
.max-w-max {
  max-width: -moz-max-content !important;
  max-width: max-content !important;
}
.max-w-md {
  max-width: 28rem !important;
}
.flex-1 {
  flex: 1 1 0% !important;
}
.flex-shrink {
  flex-shrink: 1 !important;
}
.flex-shrink-0 {
  flex-shrink: 0 !important;
}
.shrink-0 {
  flex-shrink: 0 !important;
}
.flex-grow {
  flex-grow: 1 !important;
}
.grow {
  flex-grow: 1 !important;
}
.grow-0 {
  flex-grow: 0 !important;
}
.basis-full {
  flex-basis: 100% !important;
}
.caption-bottom {
  caption-side: bottom !important;
}
.border-collapse {
  border-collapse: collapse !important;
}
.-translate-x-1\/2 {
  --tw-translate-x: -50% !important;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
}
.-translate-y-1\/2 {
  --tw-translate-y: -50% !important;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
}
.translate-x-\[-50\%\] {
  --tw-translate-x: -50% !important;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
}
.translate-y-\[-50\%\] {
  --tw-translate-y: -50% !important;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
}
/* ... */

